Fix spacing and hyperlink positions
Hyperlink take you to the correct position
Remove huge amounts of padding in sections

--- a/css/main.css
+++ b/css/main.css
@@ -244,6 +244,13 @@ html {
     /* color of the scroll thumb */
 }
 
+a.hyperlink {
+    display: block;
+    position: relative;
+    top:-5vh;
+    visibility: hidden;
+}
+
 a:hover {
     color: #768891;
     text-decoration: none;
